After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751535 - [review] fix backporting symbols from master to 1.0 branch [ th/libnm-version-1-2-bgo751535, th/libnm-version-1-0-4-bgo751535 ]
[review] fix backporting symbols from master to 1.0 branch [ th/libnm-version...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-26 11:33 UTC by Thomas Haller
Modified: 2015-06-26 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Thomas Haller 2015-06-26 11:33:11 UTC
There is a patch on nm-1-0 branch that adds:

+    nm_setting_connection_autoconnect_slaves_get_type;
+    nm_setting_connection_get_autoconnect_slaves;

to libnm_1_0_0 section in libnm/libnm.ver

$ git log -p -n1 408b6316734e3dc5ce17ee66193d0c86ded91d96 -- :libnm/libnm.ver


See also: https://bugzilla.gnome.org/show_bug.cgi?id=742993#c21
Comment 1 Thomas Haller 2015-06-26 11:34:53 UTC
Please review the branches
  th/libnm-version-1-2-bgo751535
  th/libnm-version-1-0-4-bgo751535
  


they go together. According to my test, this works as one would
expect...


The only strange thing is if I start nmcli from 1-0 branch, it links
against the 1_2 version...

cp /data/src/NetworkManager/libnm/.libs/libnm.so.0.1.0 libnm/.libs/libnm.so.0.0.0
LD_DEBUG=all ./clients/cli/nmcli connection show

      2573:     symbol=nm_setting_connection_autoconnect_slaves_get_type;  lookup in file=/data/src/_NetworkManager/clients/cli/.libs/lt-nmcli [0]
      2573:     symbol=nm_setting_connection_autoconnect_slaves_get_type;  lookup in file=/lib64/libreadline.so.6 [0]
      2573:     symbol=nm_setting_connection_autoconnect_slaves_get_type;  lookup in file=/data/src/_NetworkManager/libnm/.libs/libnm.so.0 [0]
      2573:     binding file /data/src/_NetworkManager/libnm/.libs/libnm.so.0 [0] to /data/src/_NetworkManager/libnm/.libs/libnm.so.0 [0]: normal symbol `nm_setting_connection_autoconnect_slaves_get_type' [libnm_1_2_0]

but it seems to work...


anyone experienced with linker details?
Comment 2 Lubomir Rintel 2015-06-26 14:27:10 UTC
Works fine.

(For the record: we've taken a look at this with Thomas -- the @libnm_1_2_0 call in the comment above is actually for an internal call within libnm: "binding libnm.so.0 to libnm.so.0")